Updated the readme file